// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshots should render with update 1`] = `
Array [
  <div
    className="main"
  >
    <div
      className="main__header"
    >
      <div
        className="main__header-title"
      >
        <h1
          className="heading-1"
        >
          BuscaTermos
        </h1>
      </div>
      <div
        className="main__header-search"
      >
        <div
          className="input-text"
        >
          <input
            className="input-text__input"
            disabled={false}
            onChange={[Function]}
            placeholder="Procurar por..."
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="main__header-buttons"
      >
        <button
          className="button button--borderless button--with-icon"
          onClick={[Function]}
          title="Preferências"
        >
          <div
            className="button__content"
          >
            <div
              className="icon icon--medium"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
                <path
                  d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
                />
              </svg>
            </div>
          </div>
        </button>
        <button
          className="button button--borderless button--with-icon"
          onClick={[Function]}
          title="Sobre (Existe uma atualização)"
        >
          <div
            className="button__content"
          >
            <div
              className="icon icon--medium"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="16"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12.01"
                  y1="8"
                  y2="8"
                />
              </svg>
            </div>
          </div>
          <div
            className="button__marker"
          >
            <div
              className="icon"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="23 4 23 10 17 10"
                />
                <polyline
                  points="1 20 1 14 7 14"
                />
                <path
                  d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="main__table"
    >
      <div
        className="table"
      >
        <div
          className="table__header"
        >
          <div
            className="table__row table__row--header"
          >
            <div
              className="table__cell table__cell--header table__cell--small"
              onClick={[Function]}
            >
              <span
                className="table__cell-text"
              >
                Código
              </span>
            </div>
            <div
              className="table__cell table__cell--header"
              onClick={[Function]}
            >
              <span
                className="table__cell-text"
              >
                Termo
              </span>
            </div>
          </div>
        </div>
        <div
          className="table__body"
        >
          <div
            style={
              Object {
                "height": 0,
                "overflow": "visible",
                "width": 0,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="main__translations"
    >
      <div
        className="translations-panel"
      >
        <div
          className="translations-panel__header"
        >
          Traduções
        </div>
        <div
          className="translations-panel__fields"
        >
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Alemão"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        germany.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Catalão"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        catalonia.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Chinês"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        china.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Dinamarquês"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        denmark.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Eslovaco"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        slovakia.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Espanhol"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        spain.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Finlandês"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        finland.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Francês"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        france.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Italiano"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        italy.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Polonês"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        poland.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Português (Brasil)"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        brazil.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Português (Portugal)"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        portugal.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Romeno"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        romania.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Russo"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        russia.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Tcheco"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        czech.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Turco"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        turkey.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="loading loading--loaded"
  >
    <div
      className="loading__icon"
    >
      <span
        className="css-kf4vrf"
      >
        <span
          className="css-1u65263"
        />
        <span
          className="css-p9qef"
        />
        <span
          className="css-17ifzby"
        />
        <span
          className="css-1vh5u8m"
        />
        <span
          className="css-1up17uy"
        />
        <span
          className="css-lkr3bi"
        />
      </span>
    </div>
  </div>,
]
`;

exports[`Main snapshots should render without update 1`] = `
Array [
  <div
    className="main"
  >
    <div
      className="main__header"
    >
      <div
        className="main__header-title"
      >
        <h1
          className="heading-1"
        >
          BuscaTermos
        </h1>
      </div>
      <div
        className="main__header-search"
      >
        <div
          className="input-text"
        >
          <input
            className="input-text__input"
            disabled={false}
            onChange={[Function]}
            placeholder="Procurar por..."
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="main__header-buttons"
      >
        <button
          className="button button--borderless button--with-icon"
          onClick={[Function]}
          title="Preferências"
        >
          <div
            className="button__content"
          >
            <div
              className="icon icon--medium"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="3"
                />
                <path
                  d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
                />
              </svg>
            </div>
          </div>
        </button>
        <button
          className="button button--borderless button--with-icon"
          onClick={[Function]}
          title="Sobre"
        >
          <div
            className="button__content"
          >
            <div
              className="icon icon--medium"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="16"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12.01"
                  y1="8"
                  y2="8"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="main__table"
    >
      <div
        className="table"
      >
        <div
          className="table__header"
        >
          <div
            className="table__row table__row--header"
          >
            <div
              className="table__cell table__cell--header table__cell--small"
              onClick={[Function]}
            >
              <span
                className="table__cell-text"
              >
                Código
              </span>
            </div>
            <div
              className="table__cell table__cell--header"
              onClick={[Function]}
            >
              <span
                className="table__cell-text"
              >
                Termo
              </span>
            </div>
          </div>
        </div>
        <div
          className="table__body"
        >
          <div
            style={
              Object {
                "height": 0,
                "overflow": "visible",
                "width": 0,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="main__translations"
    >
      <div
        className="translations-panel"
      >
        <div
          className="translations-panel__header"
        >
          Traduções
        </div>
        <div
          className="translations-panel__fields"
        >
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Alemão"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        germany.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Catalão"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        catalonia.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Chinês"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        china.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Dinamarquês"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        denmark.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Eslovaco"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        slovakia.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Espanhol"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        spain.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Finlandês"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        finland.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Francês"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        france.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Italiano"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        italy.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Polonês"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        poland.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Português (Brasil)"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        brazil.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Português (Portugal)"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        portugal.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Romeno"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        romania.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Russo"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        russia.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Tcheco"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        czech.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="translations-panel__field-row"
          >
            <div
              className="translations-panel__field translations-panel__field--columns-undefined"
            >
              <div
                className="translation-field"
              >
                <div
                  className="translation-field__flag"
                >
                  <div
                    className="translation-field__icon"
                    title="Turco"
                  >
                    <div
                      className="icon icon--small"
                    >
                      <svg>
                        turkey.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="input-text"
                >
                  <input
                    className="input-text__input input-text__input--disabled input-text__input--borderless"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="Selecione um item na lista"
                    spellCheck={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="loading loading--loaded"
  >
    <div
      className="loading__icon"
    >
      <span
        className="css-kf4vrf"
      >
        <span
          className="css-1u65263"
        />
        <span
          className="css-p9qef"
        />
        <span
          className="css-17ifzby"
        />
        <span
          className="css-1vh5u8m"
        />
        <span
          className="css-1up17uy"
        />
        <span
          className="css-lkr3bi"
        />
      </span>
    </div>
  </div>,
]
`;
